kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose.exe --file docker-cimage.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose.exe --file docker-cimage.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/twiteerendpoint_app-network: "true"
        io.kompose.service: db
    spec:
      hostname: db
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: arqui
        - name: MYSQL_ROOT_PASSWORD
          value: admin
        - name: MYSQL_USER
          value: root
        image: mysql:5.7.22
        imagePullPolicy: "IfNotPresent"
        name: mysql-db
        ports:
        - containerPort: 3306
        resources: {}
        tty: true
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: twiteerendpoint-db-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: twiteerendpoint-db-data
        persistentVolumeClaim:
          claimName: twiteerendpoint-db-data
status: {}
