kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose.exe --file docker-cimage.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: user
  name: user
spec:
  ports:
  - port: 5000
    protocol : TCP
    targetPort: 5000
  selector:
    io.kompose.service: user
status:
  loadBalancer: {}
