kubernetes/twiteerendpoint_app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: twiteerendpoint-app-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/twiteerendpoint_app-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/twiteerendpoint_app-network: "true"
